--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "rm -rf ./lib; NODE_ENV=production babel ./modules -d lib --ignore '__tests__'",
+    "dev": "NODE_ENV=production babel --watch ./modules -d lib --ignore '__tests__'",
     "lint": "eslint ./modules",
     "test": "npm run lint && jest",
     "prepublish": "npm run lint && npm run build"
