--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "NODE_ENV=production babel --watch ./modules -d lib --ignore '__tests__'",
     "lint": "eslint ./modules",
     "test": "npm run lint && jest",
-    "prepublish": "npm run lint && npm run build"
+    "prepublish": "npm run build"
   },
   "keywords": [
     "redux",
