--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "jest-cli": "^19.0.2",
-    "react": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
